--- a/Project_02/index.html
+++ b/Project_02/index.html
@@ -1,36 +1,77 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Projeto 02</title>
-	<meta charset="utf-8">
-	<meta charset="description" content="site desenvolvido com intuito de por em pratica tudo q estudei até aki">
-	<meta charset="keywords" content="palavaras e mais palavras separadas por virgulas">
-	<meta charset="autor" content="João Pedro">
-	<meta charset="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Projeto 02</title>
+    <meta charset="utf-8">
+    <meta charset="description" content="site desenvolvido com intuito de por em pratica tudo q estudei até aki">
+    <meta charset="keywords" content="palavaras e mais palavras separadas por virgulas">
+    <meta charset="autor" content="João Pedro">
+    <meta charset="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
 
-	<header>
-		<div class="container">
-			<div><div class="logo-1"></div><!-- logo-1 --></div>
-			<div><div class="logo-2"></div><!-- logo-2 --></div>
-			<div class="clear"></div><!-- clear -->
-		</div><!-- container -->
-	</header>
+    <header>
+        <div class="container">
+            <div>
+                <div class="logo-1"></div>
+                <!-- logo-1 -->
+            </div>
+            <div>
+                <div class="logo-2"></div>
+                <!-- logo-2 -->
+            </div>
+            <div class="clear"></div>
+            <!-- clear -->
+        </div>
+        <!-- container -->
+    </header>
 
-	<section class="cover-form">
-		<div class="container bg">
-			<div class="form-container">
-				<h2>PODE ACREDITAR, POR DENTRO É AINDA MELHOR!</h2>
-				<form>
-					<p>Nome:</p>
-					<input type="text" name="nome" required placeholder="digite seu nome aqui">
-				</form>
-				<div class="clear"></div><!-- clear -->
-			</div><!-- form-container -->
-		</div><!-- container bg -->
-	</section><!-- cover-form -->
+    <section class="cover-form">
+        <div class="container bg">
+            <div class="form-container">
+                <h2>PODE ACREDITAR, POR DENTRO É AINDA MELHOR!</h2>
+                <form>
+                    <div class="form-wraper">
+                        <p>Nome Completo:</p>
+                        <input type="text" name="nome" required placeholder="digite seu nome aqui">
+                    </div>
+                    <!-- form-wraper -->
+
+                    <div class="form-wraper">
+                        <p>E-mail:</p>
+                        <input type="text" name="email" required placeholder="digite seu e-mail aqui">
+                    </div>
+                    <!-- form-wraper -->
+
+                    <div class="form-wraper">
+                        <p>Telefone:</p>
+                        <input type="text" name="telefone" required placeholder=" digite seu telefone aqui ">
+                    </div>
+                    <!-- form-wraper -->
+
+                    <div class="form-wraper">
+                        <input type="submit" name="Enviar">
+                    </div>
+                    <!-- form-wraper -->
+
+                    <div class="form-wraper">
+                        <p>*Campos obrigatórios</p>
+                    </div>
+                    <!-- form-wraper -->
+                </form>
+            </div>
+            <div class="clear "></div>
+            <!-- clear -->
+        </div>
+        <!-- form-container -->
+        </div>
+        <!-- container bg -->
+    </section>
+    <!-- cover-form -->
 
 </body>
+
 </html>
