--- a/Project_02/index.html
+++ b/Project_02/index.html
@@ -8,6 +8,8 @@
     <meta charset="keywords" content="palavaras e mais palavras separadas por virgulas">
     <meta charset="autor" content="João Pedro">
     <meta charset="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -67,10 +69,18 @@
             <!-- clear -->
         </div>
         <!-- form-container -->
-        </div>
         <!-- container bg -->
+        </div>
     </section>
     <!-- cover-form -->
+
+
+    <section class="chamada">
+        <div class="container">
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, quo perspiciatis!</h2>
+        </div>
+    </section>
+    <!-- chamada -->
 
 </body>
 
