--- a/Project_02/index.html
+++ b/Project_02/index.html
@@ -74,14 +74,14 @@
     </section>
     <!-- cover-form -->
 
-
-    <section class="chamada">
-        <div class="container">
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, quo perspiciatis!</h2>
-        </div>
-    </section>
-    <!-- chamada -->
-
+    <div class="sla">
+        <section class="chamada">
+            <div class="container">
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, quo perspiciatis!</h2>
+            </div>
+        </section>
+        <!-- chamada -->
+    </div>
 </body>
 
 </html>
