--- a/Project_02/index.html
+++ b/Project_02/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
     <title>Projeto 02</title>
     <meta charset="utf-8">
-    <meta charset="description" content="site desenvolvido com intuito de por em pratica tudo q estudei até aki">
-    <meta charset="keywords" content="palavaras e mais palavras separadas por virgulas">
-    <meta charset="autor" content="João Pedro">
-    <meta charset="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="description" content="site desenvolvido com intuito de por em pratica tudo q estudei até aki">
+    <meta name="keywords" content="palavaras e mais palavras separadas por virgulas">
+    <meta name="autor" content="João Pedro">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -65,23 +65,76 @@
                     <!-- form-wraper -->
                 </form>
             </div>
+            <!-- form-container -->
             <div class="clear "></div>
             <!-- clear -->
         </div>
-        <!-- form-container -->
         <!-- container bg -->
-        </div>
     </section>
     <!-- cover-form -->
 
-    <div class="sla">
-        <section class="chamada">
-            <div class="container">
-                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, quo perspiciatis!</h2>
+
+    <section class="chamada">
+        <div class="container">
+            <div>
+                <h2>Lorem ipsum dolor</h2>
             </div>
-        </section>
-        <!-- chamada -->
-    </div>
+            <div>
+                <p>Lorem, ipsum dolor sit amet consectetur </p>
+            </div>
+        </div>
+        <!-- container -->
+    </section>
+    <!-- chamada -->
+
+    <section class="mosaico">
+        <div class="container">
+            <div class="mosaico-flex">
+                <div style="background-image: url('imagem/mosaico1.jpg');" class="item-1-mosaico"></div>
+                <div class="item-2-mosaico">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, ducimus. Quas quam, doloremque dolore in aliquam laudantium rerum aperiam repellat porro! Quasi, magnam! Incidunt aperiam illo autem a voluptas cumque!</p>
+                </div>
+                <!-- item-2-mosaico -->
+            </div>
+            <!-- mosaico-flex -->
+
+            <div style="flex-direction: row-reverse;" class="mosaico-flex">
+                <div style="background-image: url('imagem/mosaico2.jpg');" class="item-1-mosaico"></div>
+                <div class="item-2-mosaico">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, ducimus. Quas quam, doloremque dolore in aliquam laudantium rerum aperiam repellat porro! Quasi, magnam! Incidunt aperiam illo autem a voluptas cumque!</p>
+                </div>
+                <!-- item-2-mosaico -->
+            </div>
+            <!-- mosaico-flex -->
+
+            <div class="mosaico-flex ">
+                <div style="background-image: url( 'imagem/mosaico3.jpg'); order: 1;" class="item-1-mosaico "></div>
+                <div style="order: 2;" class="item-2-mosaico ">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, ducimus. Quas quam, doloremque dolore in aliquam laudantium rerum aperiam repellat porro! Quasi, magnam! Incidunt aperiam illo autem a voluptas cumque!</p>
+                </div>
+                <!-- item-2-mosaico -->
+            </div>
+            <!-- mosaico-flex -->
+
+            <div class="mosaico-flex ">
+                <div style="background-image: url( 'imagem/mosaico4.jpg'); order: 2;" class="item-1-mosaico "></div>
+                <div style="order: 1;" class="item-2-mosaico ">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, ducimus. Quas quam, doloremque dolore in aliquam laudantium rerum aperiam repellat porro! Quasi, magnam! Incidunt aperiam illo autem a voluptas cumque!</p>
+                </div>
+                <!-- item-2-mosaico -->
+            </div>
+            <!-- mosaico-flex -->
+
+        </div>
+        <!-- container -->
+    </section>
+    <!-- mosaico -->
+
+    <footer>
+        <img src="imagem/logo1.png" alt="logo inicial">
+        <p>Todos os direitos reservados</p>
+        <p>Contato: 7070-7070</p>
+    </footer>
 </body>
 
 </html>
