--- a/Project_03/index.html
+++ b/Project_03/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="container">
             <div class="logo"></div>
-            <nav>
+            <nav class="desktop-menu">
                 <ul>
                     <li>
                         <a href="http://">Home</a>
@@ -33,6 +33,25 @@
 
                 </ul>
             </nav>
+            <!-- desktop-menu -->
+            <nav class="mobile-menu">
+                <ul>
+                    <li>
+                        <a href="http://">Home</a>
+                    </li>
+                    <li>
+                        <a href="http://">Serviços</a>
+                    </li>
+                    <li>
+                        <a href="http://">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="http://">Contato</a>
+                    </li>
+
+                </ul>
+            </nav>
+            <!-- mobile-menu -->
 
             <div class="clear"></div>
 
@@ -41,16 +60,16 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae quam nostrum, deleniti reiciendis quod rerum laudantium dolor tempore quae! Sed, assumenda. Asperiores tempore reiciendis ab distinctio itaque? Omnis, doloribus et?</p>
             </div>
             <!-- chamada1 -->
-
+            <div class="clear"></div>
         </div>
         <!-- container -->
     </header>
-
     <section class="sessao1">
         <div class="container">
+
             <div class="sessao-texto1">
                 <h2>Desenvolvendo Sistemas Únicos</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate nihil corporis obcaecati et placeat libero aliquam. Porro, officia rem aperiam totam consectetur tenetur voluptatem distinctio nobis tempore ullam a eveniet.</p>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <ul>
                     <li>Sites</li>
                     <li>Lojas Virtuais</li>
@@ -59,7 +78,6 @@
                 <div class="btn1-texto">Entre em contato</div>
             </div>
             <!-- sessao-texto1 -->
-
 
             <div class="sessao-device1">
 
@@ -70,9 +88,10 @@
 
         </div>
         <!-- container -->
-
     </section>
     <!-- sessao1 -->
+
+
 
 </body>
 
