--- a/Project_03/index.html
+++ b/Project_03/index.html
@@ -78,18 +78,25 @@
                 <div class="btn1-texto">Entre em contato</div>
             </div>
             <!-- sessao-texto1 -->
-
             <div class="sessao-device1">
-
             </div>
             <!-- device-sessao1 -->
-
             <div class="clear"></div>
-
         </div>
         <!-- container -->
     </section>
     <!-- sessao1 -->
+
+    <section class="sessao2">
+        <div class="container">
+            <h2>Desenvolvido por profissional</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga magnam eaque, culpa veritatis totam laudantium perferendis possimus velit ad dolore rerum ipsum, minima reprehenderit laboriosam expedita asperiores accusamus omnis quos.
+            </p>
+            <img src="imagem/mockup.jpg" alt="visão">
+        </div>
+        <!-- container -->
+    </section>
+    <!-- sessao2 -->
 
 
 
