add and fixed tags

--- a/Project_03/index.html
+++ b/Project_03/index.html
@@ -97,6 +97,44 @@
         <!-- container -->
     </section>
     <!-- sessao2 -->
+    <section class="sessao3">
+        <div class="part1">
+            <div class="wraper-part1">
+                <h2>Nossso Time</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex adipisci perferendis eum assumenda molestiae dolorum exercitationem quisquam, est eos accusantium quaerat ullam tempora perspiciatis asperiores corrupti porro commodi excepturi
+                    molestias.
+                </p>
+            </div>
+        </div>
+        <!-- part1 -->
+
+        <div class="part2">
+            <div class="sobre-autor">
+                <div class="titulo-autor">
+                    <div class="wraper-titulo-autor">
+                        <h2>João Pedro</h2>
+                        <p>Fouder / Desenvolvedor</p>
+                    </div>
+                    <!-- wraper-titulo-autor -->
+                    <div class="foto-autor"></div>
+                </div>
+                <!-- titulo-autor -->
+                <div class="texto-autor">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab voluptate deleniti omnis, dolorum obcaecati velit expedita quidem beatae.</p>
+                </div>
+                <!-- texto autor -->
+            </div>
+            <!-- sobre-autor -->
+            <div class="slider-bullets">
+                <span style="background-color: black;"></span>
+                <span></span>
+                <span></span>
+            </div>
+            <!-- slider-bullets -->
+        </div>
+        <!-- part2 -->
+    </section>
+    <!-- sessao3 -->
 
 
 
