--- a/Project_04/index.html
+++ b/Project_04/index.html
@@ -116,6 +116,37 @@
         <!-- container -->
     </section>
     <!-- servico -->
+
+    <section class="perfil-container">
+        <div class="container">
+            <div class="perfil-box">
+                <div class="perfil-img">
+                    <img src="imagens/img_perfil.png" title="Fernanda">
+                </div>
+                <!-- perfil-img -->
+
+                <div class="perfil-txt">
+                    <h2>TITULO DO PERFIL</h2>
+                    <P>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dolores aliquid fugit a perferendis distinctio similique omnis molestias magnam fugiat exercitationem delectus, eos commodi officiis, inventore voluptas quaerat excepturi temporibus. Lorem
+                        ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nobis unde id odio eos hic inventore rem illum, harum enim temporibus in dignissimos ipsa velit quo cupiditate tenetur voluptates nam. Lorem ipsum, dolor sit amet
+                        consectetur adipisicing elit. Nesciunt voluptate exercitationem quis aut tempora suscipit laboriosam veniam asperiores debitis temporibus expedita sapiente, ducimus nam laudantium consequuntur eum, totam ipsam sed!
+                    </P>
+                    <br><br>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, rem. Itaque qui fuga architecto modi illum ipsa incidunt aperiam corporis, harum dignissimos quam dolorum, sunt at! Mollitia minima aspernatur cumque! Lorem ipsum dolor sit, amet consectetur
+                        adipisicing elit. Nisi recusandae nulla accusamus rem ad? Enim, expedita ipsa? Aspernatur ipsam modi, pariatur, placeat perspiciatis ea aperiam maxime, obcaecati minima hic iusto. Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Voluptatum, excepturi reprehenderit obcaecati debitis accusantium molestias odio porro officia. Iste quisquam voluptatibus minima inventore magnam nihil culpa, dolore labore aperiam tempore! Lorem ipsum dolor sit, amet consectetur
+                        adipisicing elit. Quod dolor ipsa consectetur explicabo pariatur! Maxime officia similique minima nisi ab, explicabo facilis obcaecati minus sapiente illo. Eaque fugit sed officiis.
+                    </p>
+                </div>
+                <!-- perfil-txt -->
+            </div>
+            <!-- perfil-box -->
+        </div>
+        <!-- container -->
+    </section>
+    <!-- perfil-container -->
 </body>
 
 </html>
