--- a/Project_04/index.html
+++ b/Project_04/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="logo"><img src="imagens/logo.png" title="Fernanda"></div>
             <!-- logo -->
-            <nav>
+            <nav class="menu-desktop">
                 <div class="lista">
                     <ul>
                         <li><a href=""> quem sou</a></li>
@@ -26,6 +26,19 @@
                 </div>
                 <!-- lista -->
             </nav>
+            <!-- menu-desktop -->
+            <nav class="menu-mobile">
+                <div class="lista">
+                    <ul>
+                        <li><a href=""> quem sou</a></li>
+                        <li><a href="">contato</a></li>
+                        <li><a href="">depoimentos</a></li>
+                        <li><a href="">siga-me</a></li>
+                    </ul>
+                </div>
+                <!-- lista -->
+            </nav>
+            <!-- menu-mobile -->
             <div class="clear"></div>
             <!-- clear -->
         </div>
@@ -92,6 +105,7 @@
         <!-- container -->
     </section>
     <!-- mosaico -->
+
     <section class="servico">
         <div class="container">
             <div class="servico-box">
@@ -119,34 +133,57 @@
 
     <section class="perfil-container">
         <div class="container">
-            <div class="perfil-box">
-                <div class="perfil-img">
-                    <img src="imagens/img_perfil.png" title="Fernanda">
-                </div>
-                <!-- perfil-img -->
+            <div class="sei-la">
+                <div class="perfil-box">
+                    <div class="perfil-img">
+                    </div>
+                    <!-- perfil-img -->
 
-                <div class="perfil-txt">
-                    <h2>TITULO DO PERFIL</h2>
-                    <P>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dolores aliquid fugit a perferendis distinctio similique omnis molestias magnam fugiat exercitationem delectus, eos commodi officiis, inventore voluptas quaerat excepturi temporibus. Lorem
-                        ipsum dolor, sit amet consectetur adipisicing elit. Perferendis nobis unde id odio eos hic inventore rem illum, harum enim temporibus in dignissimos ipsa velit quo cupiditate tenetur voluptates nam. Lorem ipsum, dolor sit amet
-                        consectetur adipisicing elit. Nesciunt voluptate exercitationem quis aut tempora suscipit laboriosam veniam asperiores debitis temporibus expedita sapiente, ducimus nam laudantium consequuntur eum, totam ipsam sed!
-                    </P>
-                    <br><br>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, rem. Itaque qui fuga architecto modi illum ipsa incidunt aperiam corporis, harum dignissimos quam dolorum, sunt at! Mollitia minima aspernatur cumque! Lorem ipsum dolor sit, amet consectetur
-                        adipisicing elit. Nisi recusandae nulla accusamus rem ad? Enim, expedita ipsa? Aspernatur ipsam modi, pariatur, placeat perspiciatis ea aperiam maxime, obcaecati minima hic iusto. Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Voluptatum, excepturi reprehenderit obcaecati debitis accusantium molestias odio porro officia. Iste quisquam voluptatibus minima inventore magnam nihil culpa, dolore labore aperiam tempore! Lorem ipsum dolor sit, amet consectetur
-                        adipisicing elit. Quod dolor ipsa consectetur explicabo pariatur! Maxime officia similique minima nisi ab, explicabo facilis obcaecati minus sapiente illo. Eaque fugit sed officiis.
-                    </p>
+                    <div class="perfil-txt">
+                        <h2>TITULO DO PERFIL</h2>
+                        <P>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vulputate metus porttitor neque auctor sodales. Sed aliquet lectus a accumsan sollicitudin. Nam tincidunt elementum varius. Mauris pretium rutrum mollis. Nam interdum massa vel enim semper
+                            iaculis. Mauris aliquet nisl id vulputate tristique. Nullam aliquam lectus sed tincidunt rutrum. Pellentesque pretium sed est et efficitur. Donec vel sem eleifend, malesuada nulla in, pellentesque ex. Etiam bibendum efficitur
+                            sapien, eget faucibus lacus vulputate in. Duis fermentum, nunc sed dignissim pharetra, dui tortor dignissim ante, vitae elementum odio risus at quam.
+                        </P>
+                        <br>
+                        <p>
+                            Sed sit amet dignissim mauris. Integer nec auctor nisl, eu auctor ex. Aliquam luctus nulla metus, at pretium dolor rutrum finibus. Aliquam vel diam ac mi egestas lobortis eget nec libero. Sed purus dui, porttitor sit amet euismod eu, ullamcorper a nibh.
+                            Aliquam erat volutpat. Donec dapibus rhoncus velit, in mollis dui vulputate at. Donec at maximus magna, vitae commodo diam. Cras tortor augue, condimentum non justo sit amet, porta scelerisque ligula.
+                        </p>
+                    </div>
+                    <!-- perfil-txt -->
                 </div>
-                <!-- perfil-txt -->
+                <!-- perfil-box -->
             </div>
-            <!-- perfil-box -->
+            <!-- sei-la -->
         </div>
         <!-- container -->
     </section>
     <!-- perfil-container -->
+
+    <section class="videos">
+        <div class="container">
+            <div class="video-box">
+                <iframe src="https://www.youtube.com/embed/81Xpa2ESPEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <!-- video-box -->
+
+            <div class="video-box">
+                <iframe src="https://www.youtube.com/embed/81Xpa2ESPEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <!-- video-box -->
+
+            <div class="video-box">
+                <iframe src="https://www.youtube.com/embed/81Xpa2ESPEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <!-- video-box -->
+
+            <div class="clear"></div>
+        </div>
+        <!-- container -->
+    </section>
+    <!-- videos -->
 </body>
 
 </html>
