--- a/Project_03/index.html
+++ b/Project_03/index.html
@@ -144,8 +144,10 @@
                 <div class="map-wraper3">
                     <div class="map-wraper2">
 
-                        <div id="map" class="map">
-                            <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=Rua%20Ant%C3%B4nio%20Ata%C3%ADde%20Vila%20Velha+(Meu%20mapa)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+                        <div id='mapa' class="map">
+                            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEvebhtXM9dpgGRrDUXmBAKmqXUVs0bTI"></script>
+                            <script src="js/script.js"></script>
+                            <!-- <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=Rua%20Ant%C3%B4nio%20Ata%C3%ADde%20Vila%20Velha+(Meu%20mapa)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> -->
                         </div>
                         <!--map-->
                     </div>
