--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -1,37 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="style.css">
+    <title>Frontend Mentor | Order summary card</title>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+    <section class="Back_Box">
+        <div class="box1">
+            <div class="img1"></div>
+            <div class="img2"></div>
+        </div>
+        <!-- box1 -->
+    </section>
+    <!-- Back_Box -->
 
-  Order Summary
+    <section class="espaco">
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+        <div class="area">
+            <img src="images/illustration-hero.svg" alt="pessoa curtindo" title="pessoa curtindo o som">
 
-  Annual Plan
-  $59.99/year
+            <div class="texto">
+                <h3>Order Summary</h3>
+                <p>Order Summary You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! Annual Plan $59.99/year Change Proceed to Payment Cancel Order</p>
+            </div>
+            <!-- texto -->
+        </div>
+        <!-- area -->
 
-  Change
 
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
+    </section>
+    <!-- espaco -->
+
+
 </body>
+
 </html>
+<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+<!-- <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
+        
+        .attribution a {
+            color: hsl(228, 45%, 44%);
+        }
+    </style> -->
+
+<!-- Order Summary You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! Annual Plan $59.99/year Change Proceed to Payment Cancel Order -->
+
+<!-- <footer class="foot">
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
+        </div>
+    </footer> -->
