--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -17,51 +17,71 @@
 <body>
     <section class="Back_Box">
         <div class="box1">
-            <div class="img1"></div>
+            <div class="img1"><img src="images/pattern-background-desktop.svg" alt="azul"></div>
             <div class="img2"></div>
+
         </div>
         <!-- box1 -->
     </section>
     <!-- Back_Box -->
 
-    <section class="espaco">
+    <section class="espaco ">
 
-        <div class="area">
-            <img src="images/illustration-hero.svg" alt="pessoa curtindo" title="pessoa curtindo o som">
+        <div class="area ">
+            <img src="images/illustration-hero.svg " alt="pessoa curtindo " title="pessoa curtindo o som ">
 
-            <div class="texto">
+            <div class="texto ">
                 <h3>Order Summary</h3>
-                <p>Order Summary You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! Annual Plan $59.99/year Change Proceed to Payment Cancel Order</p>
+                <p>Order Summary You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! </p>
             </div>
             <!-- texto -->
+            <div class="musica ">
+                <div class="single-part ">
+                    <img src="images/icon-music.svg " alt="musicas ">
+                </div>
+                <!-- single-part -->
+
+                <div class="single-part ">
+                    <h4>Annual Plan</h4>
+                    <p>$59.99/year </p>
+                </div>
+                <!-- single-part -->
+
+                <div class="single-part ">
+                    <a target="blank " href=" ">Change</a>
+                </div>
+                <!-- single-part -->
+
+                <div class="clear "></div>
+            </div>
+            <!-- musica -->
+            <div class="final ">
+                <button class="buton "><a target="blank " href=" ">Proceed to Payment</a></button>
+                <p><a target="blank " href=" ">Cancel Order</a></p>
+            </div>
+            <!-- final -->
+            <footer class="foot ">
+                <div class="attribution ">
+                    <p>
+                        Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="_blank ">Frontend Mentor</a>. Coded by <a href="https://github.com/JoaoPedroAC/Projetos/tree/main/order-summary-component-main" target="blank">João Pedro</a>.
+                    </p>
+                </div>
+                <!-- attribution -->
+            </footer>
+            <!-- foot -->
         </div>
         <!-- area -->
-
-
-
     </section>
     <!-- espaco -->
-
-
 </body>
 
 </html>
-<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-<!-- <style>
-        .attribution {
-            font-size: 11px;
-            text-align: center;
-        }
-        
-        .attribution a {
-            color: hsl(228, 45%, 44%);
-        }
-    </style> -->
 
-<!-- Order Summary You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! Annual Plan $59.99/year Change Proceed to Payment Cancel Order -->
 
-<!-- <footer class="foot">
-        <div class="attribution">
-            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
+<!-- Cancel Order  -->
+
+<!-- <footer class="foot ">
+        <div class="attribution ">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="_blank ">Frontend Mentor</a>. Coded by <a href="# ">Your Name Here</a>.
         </div>
     </footer> -->
