--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -18,6 +18,7 @@
     <section class="Back_Box">
         <div class="box1">
             <div class="img1"><img src="images/pattern-background-desktop.svg" alt="azul"></div>
+            <div class="img3"><img src="images/pattern-background-mobile.svg" alt="azul"></div>
             <div class="img2"></div>
 
         </div>
