--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -57,14 +57,18 @@
             </div>
             <!-- musica -->
             <div class="final ">
-                <button class="buton "><a target="blank " href=" ">Proceed to Payment</a></button>
+                <!-- <button class="buton "><a target="blank " href=" ">Proceed to Payment</a></button> -->
+                <a href=" " target="blank"><button class="buton">Proceed to Payment</button></a>
                 <p><a target="blank " href=" ">Cancel Order</a></p>
             </div>
             <!-- final -->
             <footer class="foot ">
                 <div class="attribution ">
                     <p>
-                        Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="_blank ">Frontend Mentor</a>. Coded by <a href="https://github.com/JoaoPedroAC/Projetos/tree/main/order-summary-component-main" target="blank">João Pedro</a>.
+                        Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="_blank ">Frontend Mentor</a>.
+                    </p>
+                    <p>
+                        Coded by <a href="https://github.com/JoaoPedroAC/Projetos/tree/main/order-summary-component-main" target="blank">João Pedro</a>.
                     </p>
                 </div>
                 <!-- attribution -->
