--- a/Cadastro/index.html
+++ b/Cadastro/index.html
@@ -27,7 +27,7 @@
                 <!-- email -->
                 <button id="cadastrar" onclick="">Cadastrar</button>
                 <!-- cadastrar -->
-                <textarea name="area" id="AreaTexto"></textarea>
+                <textarea name="area" id="AreaTexto" readonly></textarea>
                 <!-- AreaTexto -->
             </div>
             <!-- area -->
