--- a/Cadastro/index.html
+++ b/Cadastro/index.html
@@ -21,11 +21,11 @@
             </div>
             <!-- timer -->
             <div class="area">
-                <button id="nome" onclick="">Nome</button>
+                <button id="nome" onclick="Nome_Botao()">Nome</button>
                 <!-- nome -->
-                <button id="email" onclick="">E-mail</button>
+                <button id="email" onclick="Email_Botao()">E-mail</button>
                 <!-- email -->
-                <button id="cadastrar" onclick="">Cadastrar</button>
+                <button id="cadastrar" onclick="Cadastrar_Botao()">Cadastrar</button>
                 <!-- cadastrar -->
                 <textarea name="area" id="AreaTexto" readonly></textarea>
                 <!-- AreaTexto -->
