--- a/Cadastro/index.html
+++ b/Cadastro/index.html
@@ -21,11 +21,11 @@
             </div>
             <!-- timer -->
             <div class="area">
-                <button id="nome" onclick="Nome_Botao()">Nome</button>
+                <button id="nome" onclick="nomeBotao()">Nome</button>
                 <!-- nome -->
-                <button id="email" onclick="Email_Botao()">E-mail</button>
+                <button id="email" onclick="emailBotao() ">E-mail</button>
                 <!-- email -->
-                <button id="cadastrar" onclick="Cadastrar_Botao()">Cadastrar</button>
+                <button id="cadastrar" onclick="cadastrarBotao() ">Cadastrar</button>
                 <!-- cadastrar -->
                 <textarea name="area" id="AreaTexto" readonly></textarea>
                 <!-- AreaTexto -->
@@ -37,7 +37,7 @@
     <!-- main -->
 
 
-    <script src="script.js"></script>
+    <script src="script.js "></script>
 </body>
 
 </html>
