--- a/Calculator-Tip/index.html
+++ b/Calculator-Tip/index.html
@@ -17,8 +17,33 @@
         <!-- split -->
         <br>
         <div class="W-box">
-            <div class="B-box">
+            <div class="mulario">
+                <form>
+                    <div class="bill">
+                        <p>Bill</p>
+                        <input type="number" name="nome" required placeholder="$">
+                    </div>
+                    <!-- bill -->
 
+                    <div class="botao">
+                        <div class="b1">
+                            <button><p>5%</p></button>
+                            <button><p>10%</p></button>
+                            <button><p>15%</p></button>
+                        </div>
+                        <!-- b1 -->
+                        <div class="b2">
+                            <button><p>25%</p></button>
+                            <button><p>50%</p></button>
+                            <input type="number" name="numero">
+                        </div>
+                        <!-- b2 -->
+                    </div>
+                    <!-- botao -->
+                </form>
+            </div>
+            <!-- mulario -->
+            <div class=" B-box ">
             </div>
             <!-- B-box -->
         </div>
@@ -26,13 +51,13 @@
     </main>
 
 
-    <script src="Script/script.js"></script>
+    <script src="Script/script.js "></script>
 </body>
 
 </html>
 
-<!--    Bill Select Tip % 5% 10% 15% 25% 50% Custom Number of People Tip Amount / person Total / person Reset
+<!--    Bill Select Tip %      Custom Number of People Tip Amount / person Total / person Reset
 
-    <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
+    <div class="attribution ">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="_blank ">Frontend Mentor</a>. Coded by <a href="# ">Your Name Here</a>.
     </div> -->
