--- a/Calculator-Tip/index.html
+++ b/Calculator-Tip/index.html
@@ -20,12 +20,15 @@
             <div class="mulario">
                 <form>
                     <div class="bill">
-                        <p>Bill</p>
-                        <input type="number" name="nome" required placeholder="$">
+                        <label for="bill">Bill</label>
+                        <br>
+                        <img src="images/icon-dollar.svg" alt="">
+                        <input type="number" name="bill" id="bill" required>
                     </div>
                     <!-- bill -->
 
                     <div class="botao">
+                        <label for="botao">elect Tip %</label>
                         <div class="b1">
                             <button><p>5%</p></button>
                             <button><p>10%</p></button>
@@ -35,15 +38,27 @@
                         <div class="b2">
                             <button><p>25%</p></button>
                             <button><p>50%</p></button>
-                            <input type="number" name="numero">
+                            <input type="number" name="tip" placeholder=" Custom  " id="botao">
                         </div>
                         <!-- b2 -->
                     </div>
                     <!-- botao -->
+                    <div class="pessoa ">
+                        <label for="pessoas ">Number of People</label>
+                        <span class="zero" style="color:red;display:inline;padding-left: 10px;">Can't be zero</span>
+                        <br>
+                        <img src="images/icon-person.svg " alt=" ">
+                        <input type="number " name="pessoas " id="pessoas ">
+                    </div>
+                    <!-- pessoa -->
                 </form>
             </div>
             <!-- mulario -->
             <div class=" B-box ">
+                <div class="blue">
+
+                </div>
+                <!-- blue -->
             </div>
             <!-- B-box -->
         </div>
@@ -56,7 +71,7 @@
 
 </html>
 
-<!--    Bill Select Tip %      Custom Number of People Tip Amount / person Total / person Reset
+<!--           Tip Amount / person Total / person Reset
 
     <div class="attribution ">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge " target="_blank ">Frontend Mentor</a>. Coded by <a href="# ">Your Name Here</a>.
