--- a/Calculator-Tip/index.html
+++ b/Calculator-Tip/index.html
@@ -23,14 +23,14 @@
                         <label for="bill">Bill</label>
                         <br>
                         <img src="images/icon-dollar.svg" alt="">
-                        <input type="text" name="bill" id="bill">
+                        <input type="number" name="bill" id="bill">
                     </div>
                     <!-- bill -->
 
                     <div class="botao">
                         <label for="botao"></label>elect Tip %</label>
                         <div class="b1">
-                            <button type="button" id="cinco" onclick="Cinco()">5%</button>
+                            <button type="button" id="cinco" onclick="cincoPorcento()">5%</button>
                             <button type="button">10%</button>
                             <button type="button">15%</button>
                         </div>
@@ -48,7 +48,7 @@
                         <span class="zero" style="color:red;display:none;padding-left: 20px; font-size: smaller;">Can't be zero</span>
                         <br>
                         <img src="images/icon-person.svg " alt=" ">
-                        <input type="number " name="pessoas " id="pessoas ">
+                        <input type="number " name="pessoas " id="pessoas">
                     </div>
                     <!-- pessoa -->
                 </form>
