--- a/Calculator-Tip/index.html
+++ b/Calculator-Tip/index.html
@@ -31,14 +31,14 @@
                         <label for="botao"></label>elect Tip %</label>
                         <div class="b1">
                             <button type="button" id="cinco" onclick="cincoPorcento()">5%</button>
-                            <button type="button">10%</button>
-                            <button type="button">15%</button>
+                            <button type="button" id="dez" onclick="dezPorcento()">10%</button>
+                            <button type="button" id="quinze" onclick="quinzePorcento()">15%</button>
                         </div>
                         <!-- b1 -->
                         <div class="b2">
-                            <button type="button">25%</button>
-                            <button type="button">50%</button>
-                            <input type="number" name="tip" placeholder=" Custom " id="botao">
+                            <button type="button" id="vinteCinco" onclick="vinteCincoPorcento()">25%</button>
+                            <button type="button" id="cinquenta" onclick="cinquentaPorcento()">50%</button>
+                            <input type="number" name="tip" placeholder=" Custom " id="botao" onmouseover="custumerPorcent()">
                         </div>
                         <!-- b2 -->
                     </div>
