--- a/Calculator-Tip/index.html
+++ b/Calculator-Tip/index.html
@@ -23,12 +23,12 @@
                         <label for="bill">Bill</label>
                         <br>
                         <img src="images/icon-dollar.svg" alt="">
-                        <input type="number" name="bill" id="bill">
+                        <input type="number" name="bill" id="bill" placeholder="0.00">
                     </div>
                     <!-- bill -->
 
                     <div class="botao">
-                        <label for="botao"></label>elect Tip %</label>
+                        <label for="botao">elect Tip %</label>
                         <div class="b1">
                             <button type="button" id="cinco" onclick="cincoPorcento()">5%</button>
                             <button type="button" id="dez" onclick="dezPorcento()">10%</button>
@@ -38,17 +38,17 @@
                         <div class="b2">
                             <button type="button" id="vinteCinco" onclick="vinteCincoPorcento()">25%</button>
                             <button type="button" id="cinquenta" onclick="cinquentaPorcento()">50%</button>
-                            <input type="number" name="tip" placeholder=" Custom " id="botao" onmouseover="custumerPorcent()">
+                            <input type="number" name="tip" placeholder=" Custom " id="botao" onclick="custumerPorcent()">
                         </div>
                         <!-- b2 -->
                     </div>
                     <!-- botao -->
-                    <div class="pessoa ">
-                        <label for="pessoas ">Number of People</label>
+                    <div class="pessoa">
+                        <label for="pessoas">Number of People</label>
                         <span class="zero" style="color:red;display:none;padding-left: 20px; font-size: smaller;">Can't be zero</span>
                         <br>
-                        <img src="images/icon-person.svg " alt=" ">
-                        <input type="number " name="pessoas " id="pessoas">
+                        <img src="images/icon-person.svg" alt="pessoa">
+                        <input type="number" name="pessoas" id="pessoas" placeholder="1">
                     </div>
                     <!-- pessoa -->
                 </form>
@@ -57,7 +57,7 @@
             <div class=" B-box ">
                 <div class="blue">
                     <div class="tipAmount">
-                        <p>Tip Amoun <br></p>
+                        <p>Tip Amount<br></p>
                         <div id="tipCaunt"></div>
                     </div>
                     <!-- tipAmount -->
