--- a/Calculator-Tip/index.html
+++ b/Calculator-Tip/index.html
@@ -58,13 +58,13 @@
                 <div class="blue">
                     <div class="tipAmount">
                         <p>Tip Amount<br></p>
-                        <div id="tipCaunt"></div>
+                        <div id="tipCaunt">0.00</div>
                     </div>
                     <!-- tipAmount -->
                     <br>
                     <div class="totalPerson">
                         <p>Total<br></p>
-                        <div id="totalCaunt"></div>
+                        <div id="totalCaunt">0.00</div>
                     </div>
                     <!-- totalPerson -->
                     <div id="reset">
