--- a/Calculator-Tip/index.html
+++ b/Calculator-Tip/index.html
@@ -38,7 +38,7 @@
                         <div class="b2">
                             <button type="button" id="vinteCinco" onclick="vinteCincoPorcento()">25%</button>
                             <button type="button" id="cinquenta" onclick="cinquentaPorcento()">50%</button>
-                            <input type="number" name="tip" placeholder=" Custom " id="botao" onclick="custumerPorcent()">
+                            <input type="number" name="tip" placeholder=" Custom " id="botao" onchange="custumerPorcent()">
                         </div>
                         <!-- b2 -->
                     </div>
