--- a/Calculator-Tip/index.html
+++ b/Calculator-Tip/index.html
@@ -45,10 +45,10 @@
                     <!-- botao -->
                     <div class="pessoa">
                         <label for="pessoas">Number of People</label>
-                        <span class="zero" style="color:red;display:none;padding-left: 20px; font-size: smaller;">Can't be zero</span>
+                        <span class="zero">Can't be zero</span>
                         <br>
                         <img src="images/icon-person.svg" alt="pessoa">
-                        <input type="number" name="pessoas" id="pessoas" placeholder="1">
+                        <input type="number" name="pessoas" id="pessoas" placeholder="0">
                     </div>
                     <!-- pessoa -->
                 </form>
